Fix grid column spacing and validateZipCode function

--- a/css/main.scss
+++ b/css/main.scss
@@ -40,27 +40,56 @@ hr {
 .container {
     height: 100%;
     display: grid;
-    grid-template-columns: 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
     grid-template-rows: 1fr 2fr 1fr 2fr;
     grid-gap: 1rem;
 }
 
-.hero{
-    justify-self: center;
-}
-.navBar {
-    max-width: 100%;
+.nav {
+    order: 1;
+    grid-column:1 / span 7;
+    grid-row: 1 / span 1;
+    object-fit: fill;
     display: block;
     justify-self: center;
-    margin-left: auto;
-    margin-right: auto;
 }
-.zipCode {
+
+.zipCodeSearch {
+    order: 3;
     background-color: map-get($colors, lightGray);
-
+    object-fit: contain;
+    grid-column:2 / span 4;
+    grid-row: 3 / span 1;
+    padding: 2rem;
 }
 
-#hero {
-    height: auto;
-    max-width: 100%;
+.hero,
+.zipCodeSearch {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  min-height: 70;
+}
+
+.hero {
+    order: 2;
+    grid-column:2 / span 4;
+    grid-row: 2 / span 1;
+}
+#heroImage {
+  max-width: 100%;
+  max-height: 100%;
+  object-fit: contain;
+  padding: 3px;
+}
+
+#zipCodeSubmit {
+    background-color: map-get($colors,green);
+    border: none;
+    color: map-get($colors, white);
+    padding: 1em;
+}
+
+#zipCodeField {
+    padding: 1em;
 }
